--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,12 +1,5 @@
 div {
     color: white;
     background-color: red;
-}
-p {
-    color:white;
-    background-color: green;
-}
-button{
-    color: black;
-    background-color: goldenrod;
+    font-family: ;
 }
