--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,5 +1,7 @@
 div {
     color: white;
     background-color: red;
-    font-family: ;
+    font-family: Arial;
+    font-size: xx-large;
+    font-weight: bolder;
 }
