Flex 3: Different solution but same answer

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  gap: 16px;
 }
 
 .profile-image {
@@ -27,6 +31,14 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  flex: 0;
+  max-width: 80px;
+}
+
+.links {
+  display: flex;
+  gap: 16px;
+  flex: 1;
 }
 
 button {
@@ -35,6 +47,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  flex: initial;
 }
 
 a {
