--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.fruit {
+  max-width: 200px;
+  text-align: center;
+  margin-top: 32px;
+  flex: auto;
 }
 
 /* do not edit this footer */
