--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -15,11 +15,19 @@ body {
   justify-content: center;
 }
 
+.header {
+  font-weight: bolder;
+  font-size: 18px;
+}
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 15px;
+  gap: 15px;
 }
 
 .icon {
@@ -33,6 +41,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: none;
 }
 
 .close-button {
@@ -46,7 +55,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: none;
 }
+
+.middle {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.text {
+  margin-right: -30px;
+}
+
 
 button {
   padding: 8px 16px;
