--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -16,6 +16,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding:9px 15px 9px 15px;
 }
 
 input {
@@ -24,4 +25,41 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+body {
+  display: flex;
+  flex-direction:column;
+  justify-content: space-between;
+}
+
+.header, 
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+.footer {
+  background-color: #eee;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  list-style: none;
+  gap: 16px;
+  padding: 0;
+  margin: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(112, 112, 112);
 }
