--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,18 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+    
+  display: grid;
+  gap: 15px;
+  grid-template-areas: 
+  "header header header header"
+  "side-bar nav nav nav"
+  "side-bar article article article"
+  "side-bar article article article"
+  "side-bar article article article"
+  "side-bar article article article"
+  "side-bar article article article"
+  "footer footer footer footer";
 }
 
 .container div {
@@ -21,18 +33,22 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-area: header;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: side-bar;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-area: nav;
 }
 
 .article {
   background-color: #bccbde;
+  grid-area: article;
 }
 
 .article p {
@@ -44,4 +60,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-area: footer;
 }
