--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -1,10 +1,16 @@
 * {
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 .container {
+  height: 100vh;
   text-align: center;
+
+  display: grid;
+  grid-template: 2fr 1fr 25fr 1fr / 1fr 4fr;
+  gap: 5px;
 }
 
 .container div {
@@ -17,6 +23,15 @@
 
 .header {
   background-color: #393f4d;
+
+  grid-area: 1 / 1 / 2 / -1;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+}
+
+.logo {
+  justify-self: start;
 }
 
 .menu ul,
@@ -24,8 +39,17 @@
   font-size: 16px;
 }
 
+.menu ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
 .sidebar {
   background-color: #FF7755;
+
+  grid-area: 2 / 1 / 4 / 2;
+  display: grid;
+  gap: 40px;
 }
 
 .sidebar .photo {
@@ -34,6 +58,9 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+
+  display: grid;
+  align-content: center;
 }
 
 
@@ -42,10 +69,22 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+
+  display: grid;
+  align-content: center;
 }
 
 .nav {
   background-color: #FF7755;
+
+  grid-area: 2 / 2 / 3 / -1;
+  display: grid;
+  align-items: center;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .nav ul li {
@@ -55,6 +94,12 @@
 
 .article {
   background-color: #bccbde;
+
+  grid-area: 3 / 2 / 4 / -1;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -83,6 +128,10 @@
 
 .footer {
   background-color: #393f4d;
+  
+  grid-area: 4 / 1 / 5 / -1;
+  display: grid;
+  align-items: center;
 }
 
 .footer p {
