--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -10,7 +10,7 @@
 
   display: grid;
   grid-template: 2fr 1fr 25fr 1fr / 1fr 4fr;
-  gap: 5px;
+  gap: 4px;
 }
 
 .container div {
@@ -49,7 +49,7 @@
 
   grid-area: 2 / 1 / 4 / 2;
   display: grid;
-  gap: 40px;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -98,7 +98,7 @@
   grid-area: 3 / 2 / 4 / -1;
 
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 15px;
 }
 
@@ -113,6 +113,8 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+
+  height: 200px;
 }
 
 .card p {
