--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -16,4 +16,23 @@ button {
   font-size: 18px;
   padding: 16px 24px;
   text-align: center;
+  transition: transform 0.2s ease-in;
 }
+button:hover {
+  transform: scale(1.3);
+}
+
+/*
+button:hover {
+  animation: scale 0.2s ease-in 0s normal forwards;
+}
+@keyframes scale {
+  from {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(1.3);
+  }
+}
+*/
