--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -32,13 +32,19 @@ button {
   border: 1px solid black;
   border-radius: 10px;
   position: fixed;
-  top: 50%;
+  top: 0%;
   left: 50%;
   transform-origin: center;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 150%);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  transition: opacity 0.2s ease-in 0s, transform 0.3s ease-in 0s;
+}
+
+.popup-modal.show {
+  transform: translate(-50%, 200%);
+  opacity: 100%;
 }
 
 .popup-modal p {
