--- a/animation/03-dropdown-menu/style.css
+++ b/animation/03-dropdown-menu/style.css
@@ -25,6 +25,24 @@ ul.dropdown-menu li:hover {
   background: rgb(47, 46, 46);
 }
 
+li {
+  animation: 0.5s dropdown 1 forwards ease-in-out;
+}
+
+@keyframes dropdown {
+  from {
+    height: 0;
+  }
+  
+  70% {
+    height: 3.5rem;
+  }
+
+  to{
+    height: 3rem;
+  }
+}
+
 .visible {
   display: block;
 }
